--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1>{{title}}</h1>
-
-<ul>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px">
+ <app-home></app-home>
+ <!-- <ul>
   <li *ngFor="let item of users">{{item.id}}: {{item.userName}}</li>
-</ul>
+</ul> -->
+</div>
+
