--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px">
- <app-home></app-home>
+<router-outlet></router-outlet>
  <!-- <ul>
   <li *ngFor="let item of users">{{item.id}}: {{item.userName}}</li>
 </ul> -->
