--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,8 +3,8 @@
 
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$|async">
-      <ng-container>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+      <ng-container *ngIf="accountService.currentUser$|async">
         <li class="nav-item">
           <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
         </li>
@@ -15,7 +15,9 @@
           <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
       </ng-container>
-
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+    </li>
       <!-- <li class="nav-item">
         <a class="nav-link" (click)="logout()">Logout</a>
       </li> -->
