--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
 
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <ng-container *ngIf="accountService.currentUser$|async">
         <li class="nav-item">
           <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
@@ -15,9 +15,9 @@
           <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
       </ng-container>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
-    </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+      </li>
       <!-- <li class="nav-item">
         <a class="nav-link" (click)="logout()">Logout</a>
       </li> -->
@@ -25,7 +25,7 @@
     <div class="dropdown" *ngIf="(accountService.currentUser$|async) as user" dropdown>
       <a class="dropdown-toggle text-dark text-decoration-none" dropdownToggle>Welcome {{user.username|titlecase}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
