--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,6 +23,7 @@
       </li> -->
     </ul>
     <div class="dropdown" *ngIf="(accountService.currentUser$|async) as user" dropdown>
+      <img src="{{user.photoUrl}}" alt="{{user.username}}">
       <a class="dropdown-toggle text-dark text-decoration-none" dropdownToggle>Welcome {{user.username|titlecase}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
